<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Signed!</string>
    <string name="hello_world">Hello Signed App</string>
    <string name="action_settings">Settings</string>
    <string name="new_pic_icon">New Picture</string>
    <string name="iv_descrip">Select Picture</string>
    <string name="button_sign">Sign</string>
    <string name="button_send">Send</string>
    <string name="send_to">Send via &#8230;</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="inserT">Please type in a Signature</string>
    <string name="inserTS">Please type in a Text Size</string>
    <string name="spinnerTopic">Please select Color</string>
    <string name="color">Color:</string>
    <string name="textsize">Text Size:</string>
    <string name="signature">Signature:</string>

    <string-array name="colors">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Orange</item><!--geht nicht-->
        <item>Purple</item><!--geht nicht-->
        <item>Grey</item>
        <item>Turquoise</item><!--geht nicht-->
    </string-array>
    <string-array name="values">
        <item>-16777216</item>
        <item>-1</item>
        <item>-65536</item>
        <item>-16776961</item>
        <item>-256</item>
        <item>-16711936</item>
        <item>16744448</item><!--geht nicht-->
        <item>12517631</item><!--geht nicht-->
        <item>-7829368</item>
        <item>65535</item><!--geht nicht-->
    </string-array>
    

</resources>